testdata/baselines/reference/submodule/conformance/constructorTagOnObjectLiteralMethod.errors.txt
example.js(5,2): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== example.js (1 errors) ====
    const obj = {
      /** @constructor */
      Foo() { this.bar = "bar" }
    };
    (new obj.Foo()).bar
     ~~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    